# fleet-agent

./: README.md  STRUCTURE.md  example_agent.py  pyproject.toml
fleet_agent/: __init__.py  base.py  fleet_math.py
fleet_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fleet_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
