[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-agent"
version = "0.1.0"
description = "Shared base class for all SuperInstance domain agents"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
fleet-agent = "fleet_agent.base:FleetAgent.cli"
