[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-agent"
version = "0.2.1"
description = "Fleet coordination using constraint theory and rigidity mathematics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Cocapn Fleet", email = "fleet@cocapn.ai"}]
keywords = ["fleet", "coordination", "constraint-theory", "holonomy", "consensus", "rigidity", "pythagorean", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Tools",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
"Repository" = "https://github.com/SuperInstance/fleet-agent"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
fleet-agent = "fleet_agent.base:FleetAgent.cli"

[tool.setuptools]
packages = ["fleet_agent"]